--- a/sample/src/main/res/layout/activity_contacts_list.xml
+++ b/sample/src/main/res/layout/activity_contacts_list.xml
@@ -8,17 +8,17 @@
     tools:context="com.woxthebox.draglistview.sample.contacts.ContactsListActivity"
     android:padding="4dp">
 
-    <EditText
-        android:layout_width="match_parent"
-        style="@style/edit_text_style"
-        android:id="@+id/search_contact"
-        android:hint="search"
-        android:background="@drawable/search_button_shape"
-        android:paddingLeft="5dp"
-        android:paddingRight="10dp"
-        android:drawableLeft="@drawable/ic_search"
-        android:drawableRight="@drawable/ic_close_24dp"
-        android:layout_marginBottom="2dp"/>
+    <!--<EditText-->
+        <!--android:layout_width="match_parent"-->
+        <!--style="@style/edit_text_style"-->
+        <!--android:id="@+id/search_contact"-->
+        <!--android:hint="search"-->
+        <!--android:background="@drawable/search_button_shape"-->
+        <!--android:paddingLeft="5dp"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:drawableLeft="@drawable/ic_search"-->
+        <!--android:drawableRight="@drawable/ic_close_24dp"-->
+        <!--android:layout_marginBottom="2dp"/>-->
 
     <ListView
         android:layout_width="match_parent"
