--- a/sample/src/main/res/layout/calllog_dialog_layout.xml
+++ b/sample/src/main/res/layout/calllog_dialog_layout.xml
@@ -13,6 +13,7 @@
     android:layout_alignParentStart="true"
     android:gravity="center"
     android:padding="@dimen/activity_vertical_margin"
+    android:background="@android:color/transparent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
         <ImageView
@@ -142,7 +143,7 @@
         >
 
         <EditText
-            android:id="@+id/call_log_commment"
+            android:id="@+id/call_log_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent"
