--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="text_color">#436086</color>
     <color name="gray">#d9d9d9</color>
     <color name="pink">#f97bf5</color>
+    <color name="dark_clr">#333333</color>
 
     <color name="white">#ffffff</color>
     <color name="feed_item_bg">#ffffff</color>
