--- a/sample/src/main/res/layout/layout_externalstakeholder_adapter.xml
+++ b/sample/src/main/res/layout/layout_externalstakeholder_adapter.xml
@@ -12,7 +12,7 @@
         android:layout_margin="5dp"
         android:orientation="horizontal">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/stakeholder_image"
             android:layout_width="60dp"
             android:layout_height="match_parent"
@@ -21,14 +21,14 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginStart="5dp"
+
                 android:text="Samuel D"
                 android:textColor="#000"
                 android:id="@+id/holder_name" />
