minor relation&call

--- a/laser-native-editor/src/main/res/layout/editor_toolbar_linearlayout_horizontal.xml
+++ b/laser-native-editor/src/main/res/layout/editor_toolbar_linearlayout_horizontal.xml
@@ -41,12 +41,12 @@
         android:textSize="16sp"
         android:textStyle="bold" />
 
-    <ImageButton
-        android:id="@+id/action_bold"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/icon_bold" />
+    <!--<ImageButton-->
+        <!--android:id="@+id/action_bold"-->
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:background="@android:color/transparent"-->
+        <!--android:src="@drawable/icon_bold" />-->
 
     <ImageButton
         android:id="@+id/action_Italic"
@@ -122,14 +122,14 @@
         android:maxWidth="20dp"
         android:src="@drawable/icon_link" />
 
-    <ImageButton
-        android:id="@+id/action_map"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@android:color/transparent"
-        android:maxHeight="20dp"
-        android:maxWidth="20dp"
-        android:src="@drawable/icon_marker" />
+    <!--<ImageButton-->
+        <!--android:id="@+id/action_map"-->
+        <!--android:layout_width="40dp"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:background="@android:color/transparent"-->
+        <!--android:maxHeight="20dp"-->
+        <!--android:maxWidth="20dp"-->
+        <!--android:src="@drawable/icon_marker" />-->
 
     <ImageButton
         android:id="@+id/action_erase"
