--- a/sample/src/main/res/layout/layout_finances_adapter.xml
+++ b/sample/src/main/res/layout/layout_finances_adapter.xml
@@ -29,6 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="45dp"
             android:text="ID  :"
+            android:textAlignment="center"
+            android:layout_gravity="center"
             android:textColor="#000"
             android:textStyle="bold"
             android:id="@+id/textView6" />
@@ -38,17 +40,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="10dp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
             android:layout_toEndOf="@+id/textView6"
             android:text="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="150dp"
-            android:text="Items  :"
+            android:layout_marginStart="90dp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:text="Items       :"
+            android:layout_toEndOf="@+id/textView6"
             android:textColor="#000"
             android:textStyle="bold"
             android:id="@+id/textView2" />
@@ -57,27 +63,40 @@
             android:id="@+id/items_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_gravity="center"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="80dp"
-            android:layout_toStartOf="@+id/download"
-            android:text="2" />
-        <ImageButton
-            android:id="@+id/download"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/notification"
-            android:background="@color/project_color"
-            android:src="@drawable/ic_download" />
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/textView2"
+            android:text="2"
+
+            />
+
         <ImageButton
             android:id="@+id/notification"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="55dp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:layout_toStartOf="@+id/download"
             android:background="@color/project_color"
             android:src="@drawable/ic_notification" />
+
+        <ImageButton
+            android:id="@+id/download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:layout_marginEnd="5dp"
+            android:background="@color/project_color"
+            android:src="@drawable/ic_download"
+            />
 
 
     </RelativeLayout>
@@ -96,36 +115,27 @@
             android:textStyle="bold"
             android:id="@+id/textView5" />
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_alignBottom="@+id/value_id"
-            android:layout_toEndOf="@+id/textView5"
-            android:src="@drawable/ic_money" />
-
         <TextView
             android:id="@+id/value_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="2dp"
-            android:layout_toEndOf="@+id/imageView5"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/textView5"
             android:text="1122" />
 
     </RelativeLayout>
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/created_txt"
             android:layout_marginStart="10dp"
             android:text="Created  :"
             android:textColor="#000"
@@ -134,24 +144,29 @@
             android:id="@+id/created"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_toEndOf="@id/created_txt"
+            android:layout_marginStart="10dp"
             android:text="200 Days"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="88dp"
+            android:id="@+id/updated_txt"
             android:text="Updated  :"
+            android:layout_toEndOf="@id/created_txt"
             android:textColor="#000"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/updated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/updated_txt"
             android:layout_marginStart="12dp"
             android:text="22 Days"/>
 
-    </LinearLayout>
+    </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -172,29 +187,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/textView8"
-            android:text="Received" />
+            android:text="Billed" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/dua_date_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="Due Date  :"
-            android:visibility="gone"
+            android:layout_marginStart="42dp"
+            android:layout_toEndOf="@+id/status"
+            android:text="Due Date :"
             android:textColor="#000"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="visible"/>
 
         <TextView
+            android:id="@+id/dua_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="35dp"
-            android:layout_toStartOf="@+id/popup_menu"
-            android:text="03-Mar-2018"
-            android:visibility="gone"/>
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/dua_date_txt"
+            android:text="17-May-2018"
+            android:visibility="visible"
+            />
 
         <ImageButton
             android:id="@+id/popup_menu"
