--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="project_color">#ffffff</color>
     <color name="text_color">#436086</color>
     <color name="gray">#d9d9d9</color>
+    <color name="black">#000000</color>
     <color name="pink">#f97bf5</color>
     <color name="dark_clr">#333333</color>
 
