--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -29,6 +29,15 @@
         <item name="android:textColor">@color/text_color</item>
     </style>
 
+    <style name="table_text_view_style">
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="edit_text_style">
         <item name="android:drawablePadding">5dp</item>
         <item name="android:layout_width">wrap_content</item>
