--- a/sample/src/main/res/layout/activity_add_quote.xml
+++ b/sample/src/main/res/layout/activity_add_quote.xml
@@ -165,6 +165,7 @@
                         android:hint="Product/Service class"
                         android:layout_height="wrap_content"
                         android:inputType="textMultiLine"
+                        android:textSize="13dp"
                         android:gravity="top"
                         style="@style/edit_text_style"/>
                 </android.support.design.widget.TextInputLayout>
@@ -175,8 +176,7 @@
                 android:gravity="center|left"
                 android:orientation="horizontal">
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/text_view_style"
                     android:id="@+id/product_class_txt"
                     android:layout_gravity="center"
                     android:text="Product/Service class "
@@ -186,9 +186,10 @@
                     />
 
                 <Button
-                    android:padding="10dp"
+                    android:paddingStart="10dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
+                    android:textSize="13dp"
                     android:id="@+id/product_class_btn"
                     style="?android:attr/borderlessButtonStyle"
                     android:text="Edit"
@@ -204,8 +205,7 @@
                 android:gravity="center|left"
                 android:orientation="vertical">
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/text_view_style"
                     android:id="@+id/product_txt"
                     android:layout_gravity="left"
                     android:layout_margin="2dp"
@@ -214,8 +214,7 @@
                     android:textColor="@color/colorAccent"
                     />
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/text_view_style"
                     android:id="@+id/product_code_type"
                     android:layout_gravity="left"
                     android:text="Code Type : SAC "
@@ -224,8 +223,7 @@
                     android:textColor="@color/colorAccent"
                     />
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/text_view_style"
                     android:id="@+id/product_code"
                     android:layout_gravity="left"
                     android:text="Code : 998314 "
@@ -234,8 +232,7 @@
                     android:textColor="@color/colorAccent"
                     />
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/text_view_style"
                     android:id="@+id/product_tax_rate"
                     android:layout_gravity="left"
                     android:text="Tax Rate :18"
@@ -263,7 +260,8 @@
                         android:id="@+id/quantity"
                         android:hint="Quantity"
                         android:text="0"
-                        android:digits="0123456789.-"
+                        android:digits="0123456789"
+                        android:textSize="13dp"
                         android:inputType="numberDecimal"
                         style="@style/edit_text_style"/>
                 </android.support.design.widget.TextInputLayout>
@@ -276,6 +274,7 @@
                         android:layout_width="match_parent"
                         android:id="@+id/currency"
                         android:hint="Currency"
+                        android:textSize="13dp"
                         android:text="INR"
                         android:cursorVisible="false"
                         android:focusable="false"
@@ -301,8 +300,9 @@
                         android:id="@+id/rate"
                         style="@style/edit_text_style"
                         android:layout_width="match_parent"
-                        android:digits="0123456789.-"
+                        android:digits="0123456789"
                         android:hint="Rate"
+                        android:textSize="13dp"
                         android:inputType="numberDecimal"
                         android:text="0" />
                 </android.support.design.widget.TextInputLayout>
@@ -317,7 +317,7 @@
                     <TextView
                         android:layout_width="50dp"
                         android:layout_height="match_parent"
-
+                        android:textSize="13dp"
                         android:textAlignment="center"
                         android:gravity="center_vertical"
                         android:text="Type"
@@ -342,11 +342,12 @@
                 >
                 <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
                     android:id="@+id/description"
                     android:hint="Description"
                     android:paddingTop="5dp"
+                    android:textSize="13dp"
                     android:background="@null"
                     android:backgroundTint="@color/white"
                     style="@style/edit_text_style"
@@ -354,17 +355,29 @@
                     android:gravity="top"/>
             </android.support.design.widget.TextInputLayout>
 
-            <Button
-                android:id="@+id/add_quote_btn"
-                style="@style/button_style"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:onClick="addQuote"
-                android:text="Add +"
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="Save/Exit"
+                    android:onClick="exitQuote"
+                    android:id="@+id/exit_quote_btn"
+                    style="@style/button_style"
+                    android:layout_margin="2dp"/>
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="Add"
+                    android:onClick="addQuote"
+                    android:id="@+id/add_quote_btn"
+                    style="@style/button_style"
+                    android:layout_margin="2dp"/>
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
