--- a/sample/src/main/res/layout/layout_externalstakeholder_adapter.xml
+++ b/sample/src/main/res/layout/layout_externalstakeholder_adapter.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
-    >
+    android:layout_margin="2dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:orientation="horizontal">
+
+        >
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/stakeholder_image"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="40dp"
-            android:src="@drawable/male" />
+            app:civ_border_color="#ffffff"
+            app:civ_border_width="2dp"
+            android:src="@drawable/male"
+            />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
 
-                android:text="Samuel D"
-                android:textColor="#000"
-                android:id="@+id/holder_name" />
+        <TextView
+            style="@style/text_view_style"
+            android:id="@+id/holder_name"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="10dp"
+            android:text="Name"
+            android:layout_toEndOf="@+id/stakeholder_image"
+            android:textColor="@color/text_color_gray"
+            />
 
-            <TextView
-                android:id="@+id/holder_designation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/holder_name"
-                android:layout_below="@+id/holder_name"
-                android:text="Information System manager"
-                android:textColor="#000" />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/holder_designation"
+            style="@style/text_view_style"
+            android:layout_alignStart="@+id/holder_name"
+            android:layout_below="@+id/holder_name"
+            android:text="Software developer"
+            android:textColor="@color/text_color_gray" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
