--- a/sample/src/main/res/layout/activity_opportunities.xml
+++ b/sample/src/main/res/layout/activity_opportunities.xml
@@ -1,6 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</FrameLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/opportunities_recycleview">
+
+    </android.support.v7.widget.RecyclerView>
+
+
+</LinearLayout>
