--- a/sample/src/main/res/layout/opp_stakeholder_adapter.xml
+++ b/sample/src/main/res/layout/opp_stakeholder_adapter.xml
@@ -1,48 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="2dp">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="2dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:orientation="horizontal">
+        android:id="@+id/opp_stakeholder_card"
+        >
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/opp_stakeholder_image"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="40dp"
-            android:src="@drawable/male" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            app:civ_border_color="#ffffff"
+            app:civ_border_width="2dp"
+            android:src="@drawable/male"
+            />
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:text="Samuel D"
-                android:textColor="#000"
-                android:id="@+id/opp_holder_name" />
+        <TextView
+            style="@style/text_view_style"
+            android:id="@+id/opp_stakeholder_name"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="10dp"
+            android:text="Name"
+            android:layout_toEndOf="@+id/opp_stakeholder_image"
+            android:textColor="@color/text_color_gray"
+            />
 
-            <TextView
-                android:id="@+id/opp_holder_designation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/opp_holder_name"
-                android:layout_below="@+id/opp_holder_name"
-                android:text="Information System manager"
-                android:textColor="#000" />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/opp_stakeholder_designation"
+            style="@style/text_view_style"
+            android:layout_alignStart="@+id/opp_stakeholder_name"
+            android:layout_below="@+id/opp_stakeholder_name"
+            android:text="Software developer"
+            android:textColor="@color/text_color_gray" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
