--- a/sample/src/main/res/layout/step_view.xml
+++ b/sample/src/main/res/layout/step_view.xml
@@ -8,167 +8,177 @@
     <android.support.design.widget.CollapsingToolbarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center"
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_deal" />
+                android:src="@drawable/ic_deal" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/opp_company_name"
+                    style="@style/text_view_style"
+                    android:textSize="16dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/opp_deal_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/opp_company_name"
-            android:layout_marginStart="5dp"
-            android:text="CIOC FMCG Pvt Ltd."
-            android:layout_gravity="center"
-            style="@style/text_view_style"
-            android:textSize="20dp"/>
-        <TextView
-            android:id="@+id/opp_deal_name"
-            android:layout_width="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/text_view_style"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:layout_marginStart="10dp"
+                android:text="VALUATION " />
+
+            <TextView
+                android:layout_weight="1"
+                android:textAlignment="center"
+                style="@style/text_view_style"
+                android:text="CLOSING DATE" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:text="Blandit insolens pri ad"
-            android:layout_gravity="center"
-            />
+            android:layout_marginTop="3dp"
+            android:orientation="horizontal">
+            <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1"-->
+                <!--android:gravity="center"-->
+                <!--android:orientation="horizontal">-->
+                <TextView
+                    android:id="@+id/opp_valuation_money"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:text="" />
+            <!--</LinearLayout>-->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_date"/>
+                <TextView
+                    android:id="@+id/opp_closing_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:layout_marginStart="3dp"
+                    android:text=""/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:orientation="horizontal">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="10dp"
+                android:src="@drawable/male" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/user_name"
+                android:layout_gravity="center"
+                android:layout_marginStart="3dp"
+                android:text="Admin CIOC"
+                android:textStyle="bold"/>
+        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            style="@style/text_view_style"
-            android:layout_marginStart="10dp"
-            android:text="VALUATION " />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            style="@style/text_view_style"
-            android:layout_marginStart="100dp"
-            android:text="CLOSING DATE" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/ic_money" />
-
-        <TextView
-            android:id="@+id/opp_valuation_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="3dp"
-            android:text="5000" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:src="@drawable/ic_date"/>
-        <TextView
-            android:id="@+id/opp_closing_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="3dp"
-            android:text="12-Sep-2017"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="2dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/male" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="3dp"
-            android:text="Admin CIOC"
-            android:textStyle="bold"/>
-    </LinearLayout>
-</LinearLayout>
     </android.support.design.widget.CollapsingToolbarLayout>
     <View
         android:layout_width="wrap_content"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@color/colorPrimary"/>
-    <com.baoyachi.stepview.HorizontalStepView
-        android:id="@+id/horizontalStepView"
+
+    <com.badoualy.stepperindicator.StepperIndicator
+        android:id="@+id/stepper_indicator"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </com.baoyachi.stepview.HorizontalStepView>
-
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:stpi_doneIconDrawable="@drawable/ic_done_white_18dp"
+        app:stpi_circleColor="@color/gray"
+        app:stpi_indicatorColor="@color/green"
+        app:stpi_animDuration="250"
+        app:stpi_stepCount="6"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="2dp">
 
         <TextView
-            android:id="@+id/listName"
-            android:layout_width="wrap_content"
+            android:id="@+id/requirements_name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center"
-            android:layout_marginStart="20dp"
-            android:text=" Requirements"
+            android:text=""
             android:textAlignment="center"
-            android:textColor="#2980b9"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+            />
 
-        <Button
+        <TextView
             android:id="@+id/mark_complete"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginStart="80dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="2dp"
             android:background="@drawable/button_shape"
             android:drawableLeft="@drawable/ic_mark"
+            android:textAlignment="center"
             android:gravity="center_vertical"
-            android:text="Mark Stage as complete"
-            android:textAllCaps="false"
+            android:text="Mark stage as complete"
             android:textColor="@color/white" />
 
     </LinearLayout>
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="@color/project_color"/>
+
+
     <android.support.design.widget.TabLayout
         android:id="@+id/opp_deal_view"
         android:layout_width="match_parent"
@@ -179,6 +189,7 @@
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabSelectedTextColor="@color/project_color"
+
         app:tabTextColor="@color/gray">
     </android.support.design.widget.TabLayout>
 
