--- a/sample/src/main/res/drawable/button_shape_green.xml
+++ b/sample/src/main/res/drawable/button_shape_green.xml
@@ -4,8 +4,8 @@
 
         <size android:width="150dp"
             android:height="30dp"/>
-        <solid android:color="#ffffff"/>
-        <stroke android:color="@color/text_color"
-            android:width="1dp"/>
+        <solid android:color="#27ae60"/>
+        <stroke android:color="#27ae60"
+            android:width="2dp"/>
         <corners android:radius="20dp"/>
     </shape>
