--- a/sample/src/main/res/layout/column_item.xml
+++ b/sample/src/main/res/layout/column_item.xml
@@ -1,18 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2014 Magnus Woxblom
 
- Licensed under the Apache License, Version 2.0 (the "License");
- you may not use this file except in compliance with the License.
- You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS,
- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- See the License for the specific language governing permissions and
- limitations under the License.
--->
 <FrameLayout xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -30,7 +17,7 @@
         android:layout_gravity="center"
         android:duplicateParentState="true"
         android:foreground="@drawable/card_view_selector"
-        card_view:cardBackgroundColor="#ffffff"
+        card_view:cardBackgroundColor="#f1f1f1"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true"
@@ -72,7 +59,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginStart="20dp"
-                        android:src="@drawable/ic_account" />
+                        android:src="@drawable/ic_account_white" />
 
                     <TextView
                         android:id="@+id/opp_card_company"
